syntax = "proto3";

package io.aurigraph.v11.grpc;

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.grpc";
option java_outer_classname = "AurigraphProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ==================== Core Services ====================

// Transaction Service - High-performance transaction processing
service TransactionService {
    // Submit single transaction
    rpc SubmitTransaction(TransactionRequest) returns (TransactionResponse);
    
    // Submit batch of transactions for maximum throughput
    rpc SubmitBatch(BatchTransactionRequest) returns (stream TransactionResponse);
    
    // Stream transactions bidirectionally
    rpc StreamTransactions(stream TransactionRequest) returns (stream TransactionResponse);
    
    // Get transaction status
    rpc GetTransactionStatus(TransactionStatusRequest) returns (TransactionStatusResponse);
    
    // Get transaction by ID
    rpc GetTransaction(GetTransactionRequest) returns (Transaction);
}

// Consensus Service - HyperRAFT++ consensus protocol
service ConsensusService {
    // Request vote from validator
    rpc RequestVote(VoteRequest) returns (VoteResponse);
    
    // Append entries for log replication
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    
    // Commit block to chain
    rpc CommitBlock(BlockCommitRequest) returns (BlockCommitResponse);
    
    // Get consensus state
    rpc GetConsensusState(google.protobuf.Empty) returns (ConsensusState);
    
    // Stream consensus events
    rpc StreamConsensusEvents(google.protobuf.Empty) returns (stream ConsensusEvent);
}

// Quantum Crypto Service - CRYSTALS-Dilithium signatures
service QuantumCryptoService {
    // Generate quantum-resistant key pair
    rpc GenerateKeyPair(KeyGenerationRequest) returns (KeyPair);
    
    // Sign data with quantum-resistant signature
    rpc SignData(SignRequest) returns (SignResponse);
    
    // Verify quantum signature
    rpc VerifySignature(VerifyRequest) returns (VerifyResponse);
    
    // Batch sign multiple messages
    rpc BatchSign(BatchSignRequest) returns (BatchSignResponse);
}

// Cross-Chain Bridge Service
service CrossChainService {
    // Initiate cross-chain transfer
    rpc InitiateTransfer(CrossChainTransferRequest) returns (CrossChainTransferResponse);
    
    // Lock assets on source chain
    rpc LockAssets(LockAssetsRequest) returns (LockAssetsResponse);
    
    // Release assets on target chain
    rpc ReleaseAssets(ReleaseAssetsRequest) returns (ReleaseAssetsResponse);
    
    // Get bridge status
    rpc GetBridgeStatus(BridgeStatusRequest) returns (BridgeStatus);
    
    // Stream bridge events
    rpc StreamBridgeEvents(google.protobuf.Empty) returns (stream BridgeEvent);
}

// Monitoring Service - Real-time metrics and monitoring
service MonitoringService {
    // Get current metrics
    rpc GetMetrics(MetricsRequest) returns (MetricsResponse);
    
    // Stream real-time metrics
    rpc StreamMetrics(StreamMetricsRequest) returns (stream Metric);
    
    // Get node health
    rpc GetHealth(google.protobuf.Empty) returns (HealthResponse);
    
    // Get performance stats
    rpc GetPerformanceStats(google.protobuf.Empty) returns (PerformanceStats);
}

// ==================== Message Definitions ====================

// Transaction Messages
message Transaction {
    string id = 1;
    bytes payload = 2;
    int32 priority = 3;
    google.protobuf.Timestamp timestamp = 4;
    TransactionStatus status = 5;
    string from_address = 6;
    string to_address = 7;
    uint64 amount = 8;
    uint64 gas_price = 9;
    uint64 gas_limit = 10;
    bytes signature = 11;
    map<string, string> metadata = 12;
}

message TransactionRequest {
    bytes payload = 1;
    int32 priority = 2;
    string from_address = 3;
    string to_address = 4;
    uint64 amount = 5;
    map<string, string> metadata = 6;
}

message BatchTransactionRequest {
    repeated TransactionRequest transactions = 1;
    bool optimize_order = 2;
    int32 batch_priority = 3;
}

message TransactionResponse {
    string transaction_id = 1;
    TransactionStatus status = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
    uint64 block_height = 5;
    bytes transaction_hash = 6;
}

message TransactionStatusRequest {
    string transaction_id = 1;
}

message TransactionStatusResponse {
    string transaction_id = 1;
    TransactionStatus status = 2;
    uint64 block_height = 3;
    int32 confirmations = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message GetTransactionRequest {
    string transaction_id = 1;
}

enum TransactionStatus {
    TRANSACTION_STATUS_UNKNOWN = 0;
    TRANSACTION_STATUS_PENDING = 1;
    TRANSACTION_STATUS_VALIDATING = 2;
    TRANSACTION_STATUS_PROCESSING = 3;
    TRANSACTION_STATUS_COMMITTED = 4;
    TRANSACTION_STATUS_FAILED = 5;
}

// Consensus Messages
message VoteRequest {
    uint64 term = 1;
    string candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message VoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
    string voter_id = 3;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 match_index = 3;
}

message LogEntry {
    uint64 index = 1;
    uint64 term = 2;
    bytes data = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message BlockCommitRequest {
    Block block = 1;
    repeated bytes validator_signatures = 2;
}

message BlockCommitResponse {
    bool success = 1;
    string block_hash = 2;
    uint64 block_height = 3;
    string message = 4;
}

message Block {
    uint64 height = 1;
    string previous_hash = 2;
    string merkle_root = 3;
    google.protobuf.Timestamp timestamp = 4;
    repeated Transaction transactions = 5;
    bytes validator_signature = 6;
    map<string, string> metadata = 7;
}

message ConsensusState {
    uint64 current_term = 1;
    string leader_id = 2;
    ConsensusRole role = 3;
    uint64 commit_index = 4;
    uint64 last_applied = 5;
    repeated string peers = 6;
    uint64 block_height = 7;
    double tps = 8;
}

message ConsensusEvent {
    EventType type = 1;
    google.protobuf.Timestamp timestamp = 2;
    string node_id = 3;
    map<string, string> data = 4;
}

enum ConsensusRole {
    CONSENSUS_ROLE_FOLLOWER = 0;
    CONSENSUS_ROLE_CANDIDATE = 1;
    CONSENSUS_ROLE_LEADER = 2;
}

enum EventType {
    EVENT_TYPE_UNKNOWN = 0;
    EVENT_TYPE_ELECTION_STARTED = 1;
    EVENT_TYPE_LEADER_ELECTED = 2;
    EVENT_TYPE_BLOCK_PROPOSED = 3;
    EVENT_TYPE_BLOCK_COMMITTED = 4;
    EVENT_TYPE_NODE_JOINED = 5;
    EVENT_TYPE_NODE_LEFT = 6;
}

// Quantum Crypto Messages
message KeyGenerationRequest {
    SecurityLevel security_level = 1;
    string key_id = 2;
}

message KeyPair {
    bytes public_key = 1;
    bytes private_key = 2;
    string key_id = 3;
    SecurityLevel security_level = 4;
    google.protobuf.Timestamp created_at = 5;
}

message SignRequest {
    bytes data = 1;
    bytes private_key = 2;
    string key_id = 3;
}

message SignResponse {
    bytes signature = 1;
    string algorithm = 2;
    google.protobuf.Timestamp signed_at = 3;
}

message VerifyRequest {
    bytes data = 1;
    bytes signature = 2;
    bytes public_key = 3;
}

message VerifyResponse {
    bool valid = 1;
    string message = 2;
}

message BatchSignRequest {
    repeated bytes data = 1;
    bytes private_key = 2;
}

message BatchSignResponse {
    repeated bytes signatures = 1;
    int32 success_count = 2;
}

enum SecurityLevel {
    SECURITY_LEVEL_NIST_1 = 0;
    SECURITY_LEVEL_NIST_3 = 1;
    SECURITY_LEVEL_NIST_5 = 2;
}

// Cross-Chain Messages
message CrossChainTransferRequest {
    string source_chain = 1;
    string target_chain = 2;
    string asset_id = 3;
    uint64 amount = 4;
    string sender_address = 5;
    string recipient_address = 6;
    map<string, string> metadata = 7;
}

message CrossChainTransferResponse {
    string transfer_id = 1;
    TransferStatus status = 2;
    string source_tx_hash = 3;
    string target_tx_hash = 4;
    google.protobuf.Timestamp initiated_at = 5;
}

message LockAssetsRequest {
    string transfer_id = 1;
    string chain_id = 2;
    string asset_id = 3;
    uint64 amount = 4;
}

message LockAssetsResponse {
    bool success = 1;
    string lock_hash = 2;
    uint64 lock_height = 3;
}

message ReleaseAssetsRequest {
    string transfer_id = 1;
    string chain_id = 2;
    bytes proof = 3;
}

message ReleaseAssetsResponse {
    bool success = 1;
    string release_hash = 2;
    uint64 amount_released = 3;
}

message BridgeStatusRequest {
    string chain_id = 1;
}

message BridgeStatus {
    string chain_id = 1;
    bool connected = 2;
    uint64 last_block = 3;
    int32 pending_transfers = 4;
    repeated string supported_assets = 5;
}

message BridgeEvent {
    string transfer_id = 1;
    BridgeEventType type = 2;
    google.protobuf.Timestamp timestamp = 3;
    map<string, string> data = 4;
}

enum TransferStatus {
    TRANSFER_STATUS_UNKNOWN = 0;
    TRANSFER_STATUS_INITIATED = 1;
    TRANSFER_STATUS_LOCKED = 2;
    TRANSFER_STATUS_RELEASING = 3;
    TRANSFER_STATUS_COMPLETED = 4;
    TRANSFER_STATUS_FAILED = 5;
}

enum BridgeEventType {
    BRIDGE_EVENT_UNKNOWN = 0;
    BRIDGE_EVENT_TRANSFER_INITIATED = 1;
    BRIDGE_EVENT_ASSETS_LOCKED = 2;
    BRIDGE_EVENT_ASSETS_RELEASED = 3;
    BRIDGE_EVENT_TRANSFER_COMPLETED = 4;
    BRIDGE_EVENT_TRANSFER_FAILED = 5;
}

// Monitoring Messages
message MetricsRequest {
    repeated string metric_names = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;
}

message MetricsResponse {
    repeated Metric metrics = 1;
}

message Metric {
    string name = 1;
    double value = 2;
    google.protobuf.Timestamp timestamp = 3;
    map<string, string> labels = 4;
}

message StreamMetricsRequest {
    repeated string metric_names = 1;
    int32 interval_seconds = 2;
}

message HealthResponse {
    HealthStatus status = 1;
    string version = 2;
    google.protobuf.Timestamp uptime_since = 3;
    map<string, ComponentHealth> components = 4;
}

message ComponentHealth {
    HealthStatus status = 1;
    string message = 2;
    map<string, string> metadata = 3;
}

message PerformanceStats {
    double current_tps = 1;
    double peak_tps = 2;
    double average_latency_ms = 3;
    double p95_latency_ms = 4;
    double p99_latency_ms = 5;
    uint64 total_transactions = 6;
    uint64 successful_transactions = 7;
    uint64 failed_transactions = 8;
    double cpu_usage_percent = 9;
    double memory_usage_percent = 10;
    uint64 active_connections = 11;
    google.protobuf.Timestamp measured_at = 12;
}

enum HealthStatus {
    HEALTH_STATUS_UNKNOWN = 0;
    HEALTH_STATUS_HEALTHY = 1;
    HEALTH_STATUS_DEGRADED = 2;
    HEALTH_STATUS_UNHEALTHY = 3;
}